# clubby

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.nginx  Dockerfile.npm  Dockerfile.static  Pipfile  README.md  build.sh  buildfiles.txt  data-migration.py  deploy.sh  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  init-localstack.sh  manage.py  package-lock.json  package.json  pgsetup.sql  poetry.toml  pyproject.toml  release.sh  serve-static.js  serverless.yml  start.sh  webpack.config.js
client/_common/: fonts.scss
client/sjcadmin/: attendance.js  courses.js  member.js  members.js  reports.js
client/sjcmembers/: common.js
config/nginx/: sjcadmin.conf
config/static/: static.conf
frontend/: .env  .env.production  .gitlab-ci.yml  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.prod.json
frontend-members/: .env  .env.production  .gitlab-ci.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.prod.json
frontend-members/src/: App.tsx  authentication.ts  errors.ts  http.ts  index.css
frontend-members/tests/: members.test.ts
frontend/src/: App.scss  App.tsx  errors.ts  index.css
services/: docker-compose.override.yml  docker-compose.yml  gateway.conf
services/attendance/: .gitlab-ci.yml  Dockerfile  entrypoint.sh  main.py  nginx.json  pyproject.toml
services/attendance/certs/: api_auth.cer  newkey.pem
services/attendance/migrations/: env.py
services/attendance/migrations/versions/: 1880a8982b2f_create_initial_models.py  5604f170e72f_changed_student_to_member_for_domain_.py
services/attendance/src/: database.py  errors.py  members.py  students.py
services/attendance/src/middleware/: jwt_auth.py
services/attendance/src/models/: __init__.py  attendance.py
services/attendance/src/schemas/: attendance.py  token.py
services/attendance/terraform/: Dockerfile  main.tf  provider.tf
services/attendance/terraform/data/: container_definitions.json
services/attendance/tests/api/: _jwt.py  _seeder.py  test_authorisation.py  test_create.py  test_delete.py  test_query.py
services/attendance/tests/unit/middleware/: test_jwt_auth.py
services/attendance/tests/unit/models/: test_resolution.py
sjcadmin/: admin.py  asgi.py  errors.py  hosts.py  services.py  settings.py  urls.py  views.py  wsgi.py
sjcadmin/controllers/: api.py  attendance.py  home.py  members.py
sjcadmin/migrations/: 0002_attendance_paid_alter_student_licence.py  0005_alter_student_join_date_note.py  0007_course.py  0008_attendance__course_payment__course_and_more.py  0010_student__creator.py
sjcadmin/models/: __init__.py  attendance.py  course.py  session.py  student.py
sjcadmin/sjcadmin/: schemas.py  urls.py
sjcadmin/sjcapi/: urls.py
sjcadmin/sjcattendance/: errors.py  router.py  urls.py
sjcadmin/sjcauth/: forms.py  models.py
sjcadmin/sjcmembers/: apps.py  urls.py  views.py
sjcadmin/sjcstore/: apps.py
sjcadmin/static/: app.css  app.js  attendance.js  member.js
sjcadmin/templates/: _base.html  attendance.html  base.html  home.html  member.html  members.html
templates/sjcadmin/: _base.html  attendance.html  courses.html  home.html  (+3 more)
terraform/: main.tf  s3.tf
workers/: docker-compose.override.yml  docker-compose.yml
workers/attendance/: .gitlab-ci.yml  Dockerfile  index.py  package-lock.json  package.json  pyproject.toml  serverless.yml
(+192 files in other folders)
