[tool.poetry]
name = "sjc-control"
version = "0.1.0"
description = ""
authors = ["Clark Sirl"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
django-dbbackup = "^4.0.2"
django-storages = "^1.13.2"
boto3 = "^1.26.50"
django-hosts = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
