[tool.poetry]
name = "sjc-control"
version = "0.1.0"
description = ""
authors = ["Clark Sirl"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
django-dbbackup = "^4.0.2"
django-storages = "^1.13.2"
boto3 = "^1.26.50"
django-hosts = "^5.2"
pandas = "^1.5.3"
django-silk = "^5.0.3"
pydantic = "^2.3.0"
sentry-sdk = "^1.30.0"
requests = "^2.31.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
django-cors-headers = "^4.2.0"
djangorestframework = "^3.14.0"
pyhumps = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sjcadmin.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
addopts = [
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]