[tool.poetry]
name = "sjcadmin-attendance-worker"
version = "1.0.0"
description = ""
authors = ["Clark Sirl <click66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.44"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
